# serverless-saga-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: RUNBOOK.md  SYSTEM_DESIGN_DOCUMENT.md  deployment.py  diagram_lib.py  overview.py  storage.py  workflow.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
infrastructure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/environments/: prod.tfvars  staging.tfvars
inventory/: pyproject.toml
inventory/inventory/: __init__.py  cleanup.py  cleanup_handler.py  handler.py  models.py  reserver.py
inventory/inventory/db/: client.py
inventory/tests/: test_cleanup.py  test_client.py  test_handler.py  test_reserver.py
payment/: pyproject.toml
payment/payment/: __init__.py  handler.py  models.py  processor.py  rollback.py
payment/payment/db/: connection.py  queries.py
payment/tests/: test_handler.py  test_processor.py  test_rollback.py
saga_initiator/: pyproject.toml
saga_initiator/saga_initiator/: dependencies.py  handler.py  main.py
saga_initiator/saga_initiator/models/: requests.py  responses.py
saga_initiator/saga_initiator/routes/: purchase.py  status.py
saga_initiator/tests/: conftest.py  test_purchase_route.py  test_status_route.py
scripts/: README-load-test.md  drain-dlq.sh  load_test.py  localstack-init.sh  run_workers.py  seed-dynamodb.sh  seed-postgres.sh
shared/: pyproject.toml
shared/shared/: __init__.py  config.py  constants.py  events.py  exceptions.py  logger.py  metrics.py  saga_monitor.py  sqs_client.py
shared/tests/: test_config.py  test_events.py  test_exceptions.py  test_logger.py  test_metrics.py  test_sqs_client.py
(+22 files in other folders)
