[project]
name = "flash-sale-payment"
version = "0.1.0"
description = "Payment service for Flash Sale Saga"
requires-python = ">=3.12"
dependencies = [
    "flash-sale-shared",
    "psycopg2-binary>=2.9",
    "boto3>=1.28",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["payment*"]
