[project]
name = "flash-sale-shared"
version = "0.1.0"
description = "Shared library for Flash Sale Saga microservices"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "boto3>=1.28",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*"]
